remove payment specific logics
